Переработан весь основной сервис